Bug 513715 - Spectacle records dimensions tooltip if rectangular recording region is accepted by double-clicking in it
Summary: Spectacle records dimensions tooltip if rectangular recording region is accep...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 6.5.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-22 18:26 UTC by Nico
Modified: 2026-07-03 23:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.3
Sentry Crash Report:


Attachments
A screen recording where you can see it (120.29 KB, video/webm)
2025-12-22 18:26 UTC, Nico
Details
With this it should be clear how to reproduce it (1.35 MB, video/webm)
2025-12-23 20:18 UTC, Nico
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nico 2025-12-22 18:26:01 UTC
Created attachment 187878 [details]
A screen recording where you can see it

SUMMARY
When taking a screen recording using META + R the tooltip with the dimensions selected is visible in the recording

STEPS TO REPRODUCE
1. Make a rectangular selection screen recording

OBSERVED RESULT
It shows the dimensions in the recording where the mouse pointer was released

EXPECTED RESULT
Should not be visible

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.21.0
Qt Version: 6.10.1
Kernel Version: 6.12.61-1-lts (64-bit)
Graphics Platform: Wayland
Processors: 4 × AMD Ryzen 3 3250U with Radeon Graphics
Memory: 36 GiB of RAM (33.2 GiB usable)
Graphics Processor: AMD Radeon Vega 3 Graphics
Comment 1 Nate Graham 2025-12-23 19:57:48 UTC
Hmm, I can't reproduce this on git master. The tooltip itself appears outside of the region; it's not clear to me how it can get mis-positioned like that.

Can you attach a video recording with your phone that shows it happening, maybe?
Comment 2 Nico 2025-12-23 19:58:30 UTC
Sure I will record a video with my phone now
Comment 3 Nico 2025-12-23 20:08:14 UTC
I think the key point is that I'm double-clicking in the middle of the region to start the recording!
Comment 4 Nico 2025-12-23 20:18:10 UTC
Created attachment 187915 [details]
With this it should be clear how to reproduce it
Comment 5 Nate Graham 2025-12-23 20:34:30 UTC
Brilliant, I can reproduce that now!
Comment 6 Bug Janitor Service 2026-06-30 19:14:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/spectacle/-/merge_requests/557
Comment 7 Noah Davis 2026-07-02 00:20:44 UTC
Git commit 3edac14189e5591b37039c4350a2e17597e5b9a3 by Noah Davis.
Committed on 30/06/2026 at 19:11.
Pushed by ndavis into branch 'master'.

Fix lack of mouse release events when making windows transparent to input after double click

M  +14   -0    src/Gui/CaptureWindow.cpp
M  +7    -0    src/Gui/SpectacleWindow.cpp
M  +2    -0    src/Gui/SpectacleWindow.h

https://invent.kde.org/plasma/spectacle/-/commit/3edac14189e5591b37039c4350a2e17597e5b9a3
Comment 8 Noah Davis 2026-07-02 17:20:39 UTC
Git commit 5176db31e718c15f43f2c6a532c174a56f093c26 by Noah Davis.
Committed on 02/07/2026 at 00:22.
Pushed by ndavis into branch 'Plasma/6.7'.

Fix lack of mouse release events when making windows transparent to input after double click

(cherry picked from commit 3edac14189e5591b37039c4350a2e17597e5b9a3)

Co-authored-by: Noah Davis <noahadvs@gmail.com>

M  +14   -0    src/Gui/CaptureWindow.cpp
M  +7    -0    src/Gui/SpectacleWindow.cpp
M  +2    -0    src/Gui/SpectacleWindow.h

https://invent.kde.org/plasma/spectacle/-/commit/5176db31e718c15f43f2c6a532c174a56f093c26