Fix lack of mouse release events when making windows transparent to input after double click

BUG: 513715

(cherry picked from commit 3edac14189e5591b37039c4350a2e17597e5b9a3)

Co-authored-by: Noah Davis <noahadvs@gmail.com>